# docs/swagger.yaml
@@ -25,7 +25,7 @@ definitions:
   handler.GetTodayExerciseResponse:
     properties:
       exercise:
-        $ref: '#/definitions/models.UserExerciseHistory'
+        $ref: '#/definitions/handler.UserExercise'
       is_exercise_completed:
         type: boolean
     type: object
@@ -110,6 +110,21 @@ definitions:
         description: 이미지 URL
         type: string
     type: object
+  handler.UserExercise:
+    properties:
+      exercise_date:
+        description: 운동일
+        type: string
+      exercise_ended_at:
+        description: 운동 종료 시간
+        type: string
+      exercise_started_at:
+        description: 운동 시작 시간
+        type: string
+      user_id:
+        description: 사용자 ID
+        type: integer
+    type: object
   handler.UserObject:
     properties:
       display_order:
@@ -150,23 +165,6 @@ definitions:
     properties:
       is_onboarding_completed:
         type: boolean
-    type: object
-  models.UserExerciseHistory:
-    properties:
-      exercise_date:
-        description: 운동일
-        type: string
-      exercise_ended_at:
-        description: 운동 종료 시간
-        type: string
-      exercise_started_at:
-        description: 운동 시작 시간
-        type: string
-      id:
-        type: integer
-      user_id:
-        description: 사용자 ID
-        type: integer
     type: object
 host: ec2-13-209-98-22.ap-northeast-2.compute.amazonaws.com
 info:
@@ -351,7 +349,7 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: 요청
+      - description: '요청(1: 운동시작, 2: 운동종료)'
         in: body
         name: req
         required: true
